--- a/index.html
+++ b/index.html
@@ -12,8 +12,36 @@
 </head>
 
 <body>
-
-    <!--JavaScript at end of body for optimized loading-->
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Pokedex</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div>
+            <div class="row">
+                <div class="col s10">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">search</i>
+                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <label for="autocomplete-input">Digite o nome do pokemon</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s2">
+                    <a class="waves-effect waves-light btn">button</a>
+                </div>
+            </div>
+        </div>
+        <div> info </div>
+        <div> carrossoel </div>
+    </div>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
