--- a/index.html
+++ b/index.html
@@ -22,24 +22,34 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container #bbdefb blue lighten-5" >
         <div>
             <div class="row">
-                <div class="col s10">
-                    <div class="row">
+                <div class="col s12">
+                    <div class="row valign-wrapper">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">search</i>
                             <input type="text" id="autocomplete-input" class="autocomplete">
                             <label for="autocomplete-input">Digite o nome do pokemon</label>
                         </div>
+                        <div class="col s2">
+                            <a class="waves-effect waves-light btn">button</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col s2">
-                    <a class="waves-effect waves-light btn">button</a>
                 </div>
             </div>
         </div>
-        <div> info </div>
+        <div > 
+            <div class="row ">
+                <div class="col s12 m4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
         <div> carrossoel </div>
     </div>
     <script type="text/javascript" src="js/materialize.min.js"></script>
