criando lista de tipos

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                     </div>
                 </div>
                 <div class="col s10 m6 center-align">
-                    <h3 id="nomePokemon"></h3>
+                    <h3 id="nomePokemon" class="deep-purple-text"></h3>
                     <ul id="listaHabilidades"></ul>
+                    <ul id="listaTipos" class="deep-purple-text"></ul>
                 </div>
             </div>
         </div>
